Add sample usage to README

--- a/README
+++ b/README
@@ -5,3 +5,13 @@ keychain.
 Generic and Internet passwords are mostly functional. Better support for
 finding existing items needs to be added, and key/certificate support still
 needs to be added.
+
+It's pretty simple to use:
+
+InternetPassword *password = [[InternetPassword alloc] initWithLabel:@"My Internet Password"
+                                                         accessGroup:nil];
+password.account = @"my_username";
+password.password = @"MySecr3tP@ssword";
+password.server = @"www.apple.com";
+password.protocol = kNetworkProtocolFTP;
+[password writeToKeychain];
